update docker files

--- a/microservice2/Dockerfile
+++ b/microservice2/Dockerfile
@@ -2,5 +2,5 @@
 FROM adoptopenjdk/openjdk11
 VOLUME /tmp
 EXPOSE 8080
-ADD ./build/libs/MyService-0.0.1-SNAPSHOT.jar app.jar
+ADD ./build/libs/secondservice-0.0.1-SNAPSHOT.jar app.jar
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
