--- a/microservice2/.gitignore
+++ b/microservice2/.gitignore
@@ -1,9 +1,8 @@
+HELP.md
 .gradle
-/build/
 !gradle/wrapper/gradle-wrapper.jar
-
-### Eclipse ###
-/bin
+!**/src/main/**
+!**/src/test/**
 
 ### STS ###
 .apt_generated
@@ -19,7 +18,7 @@
 *.iws
 *.iml
 *.ipr
-/out/
+out/
 
 ### NetBeans ###
 /nbproject/private/
@@ -27,3 +26,6 @@
 /dist/
 /nbdist/
 /.nb-gradle/
+
+### VS Code ###
+.vscode/
